welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:51: error: ';' expected but 'else' found.
    else{
    ^golomb:62: error: Unmatched closing brace '}' ignored here
 }
 ^